# program

./: .gitignore  README.md
claude/general-agent/v2/crates/agent-core/: Cargo.toml
claude/general-agent/v2/crates/agent-core/src/: error.rs  lib.rs
claude/general-agent/v2/crates/agent-llm/: Cargo.toml
claude/general-agent/v2/crates/agent-storage/: Cargo.toml
claude/general-agent/v2/crates/agent-storage/migrations/: 002_create_messages.sql  003_subagent_tables.sql  004_add_total_tasks.sql
claude/general-agent/v2/crates/agent-workflow/: Cargo.toml
python/general-agent/: .claudeignore  .gitignore  OLLAMA_SETUP.md  README.md  SMOKE_TEST_APPROVAL_UI.md  config.yaml  pyproject.toml  setup_ollama.sh  test_phase_3_1.py
python/general-agent/.planning/: handoff-2026-03-08.md  handoff-2026-03-09-stabilization.md  handoff-2026-03-09.md  ollama-integration-progress.md  phase-5-chinese-embedding-deep-dive.md  phase-5-complete.md  phase-5-implementation-plan.md  phase-5-rag-handoff.md  phase-5-session-handoff.md  phase1-progress-2026-03-04.md  phase2-progress-2026-03-04.md  phase6-acceptance-report.md  phase6-progress-2026-03-06.md  phase7-kickoff-2026-03-06.md  phase7-week2-progress-2026-03-06.md  phase7-week2-progress-2026-03-07.md  phase7-week3-progress-2026-03-07.md  phase7-week3-progress-2026-03-08.md  session-handoff-2026-03-05-afternoon.md  session-handoff-2026-03-05.md  session-summary-2026-03-04.md  task-7.3.3-notification-design.md
python/general-agent/config/: mcp_config.yaml
python/general-agent/docs/: api.md  mcp-phase-3.2-summary.md  mcp.md  tui.md
python/general-agent/docs/plans/: 2026-03-02-general-agent-design.md  2026-03-04-mcp-integration.md  2026-03-05-phase6-tui-implementation.md  2026-03-08-performance-optimization-design.md  2026-03-08-performance-optimization.md
python/general-agent/docs/research/: tui-solutions-research.md
python/general-agent/docs/workflow/: integration-tests.md  week2-advanced-features.md
python/general-agent/examples/: workflow_complete_demo.py  workflow_notification_demo.py
python/general-agent/skills/personal/: note.md
python/general-agent/src/: main.py
python/general-agent/src/api/: routes.py
python/general-agent/src/cli/: __main__.py  app.css  app.py  core_init.py  quick.py  startup.py
python/general-agent/src/cli/widgets/: __init__.py  message_list.py
python/general-agent/src/core/: executor.py  ollama_client.py  router.py
python/general-agent/src/mcp/: __init__.py  config.py  connection_manager.py  exceptions.py  tool_executor.py
python/general-agent/src/rag/: __init__.py  audit.py  config.py  engine.py
python/general-agent/src/rag/chunking/: factory.py  fixed.py  hybrid.py  semantic.py
python/general-agent/src/rag/embeddings/: __init__.py  base.py
python/general-agent/src/rag/loaders/: __init__.py  base.py  factory.py  text.py
python/general-agent/src/rag/retrieval/: semantic.py  utils.py
python/general-agent/src/rag/storage/: factory.py
python/general-agent/src/skills/: __init__.py  parser.py  registry.py
python/general-agent/src/storage/: database.py  models.py
python/general-agent/src/workflow/: __init__.py  approval.py  approval_ui.py  executor.py  models.py  planner.py
python/general-agent/src/workflow/performance/: __init__.py  alerts.py  collector.py  dashboard.py  reporter.py  storage.py  tracer.py
python/general-agent/static/css/: style.css
python/general-agent/static/js/: app.js
python/general-agent/templates/: index.html
python/general-agent/tests/: test_e2e.py  test_main.py  test_mcp_e2e.py
python/general-agent/tests/cli/: test_app.py  test_integration.py  test_quick.py  test_widgets.py
python/general-agent/tests/core/: __init__.py  test_context.py  test_ollama_client.py  test_router.py
python/general-agent/tests/mcp/: __init__.py  conftest.py  test_config.py  test_connection_manager.py  test_phase_3_2_integration.py  test_security.py  test_tool_executor.py
python/general-agent/tests/rag/: __init__.py  test_audit.py  test_retrieval.py
python/general-agent/tests/skills/: __init__.py  test_models.py  test_registry.py
python/general-agent/tests/storage/: test_database.py  test_models.py
python/general-agent/tests/workflow/: test_approval_ui.py  test_database.py  test_models.py  test_notification.py  test_orchestrator.py  test_planner.py
python/general-agent/tests/workflow/performance/: test_alerts.py  test_collector.py  test_dashboard.py  test_reporter.py  test_tracer.py
python/general-agent/v2/: Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  agent.db-shm  agent.db-wal  test_skills.sh
python/general-agent/v2/architecture/: RUST_DESIGN.md
python/general-agent/v2/crates/agent-api/: Cargo.toml
python/general-agent/v2/crates/agent-cli/: Cargo.toml
python/general-agent/v2/crates/agent-core/: Cargo.toml
python/general-agent/v2/crates/agent-llm/: Cargo.toml
python/general-agent/v2/crates/agent-mcp/: Cargo.toml
python/general-agent/v2/crates/agent-rag/: Cargo.toml
python/general-agent/v2/crates/agent-skills/: ACCEPTANCE.md  Cargo.toml
python/general-agent/v2/crates/agent-storage/: Cargo.toml
python/general-agent/v2/crates/agent-tui/: Cargo.toml  已知问题和改进建议.md
python/general-agent/v2/crates/agent-workflow/: Cargo.toml
python/general-agent/v2/docs/: API.md  ARCHITECTURE.md  v1-features.md
python/general-agent/v2/docs/plans/: skills-system-design.md
python/general-agent/v2/docs/progress/: 2026-03-11-stage3-handoff.md  integration-tests-complete.md  session-handoff.md  week1-day3-4.md  week3-complete.md
python/general-agent/v2/docs/testing/: phase2-testing-guide.md  uuid-fix.md
tauri/local-music-player/src-tauri/: Cargo.toml
tauri/local-music-player/src-tauri/capabilities/: default.json
tauri/local-music-player/src-tauri/src/: audio_player.rs  errors.rs  lib.rs  lib.rs.bak  lib.rs.bak2  lib.rs.bak3  main.rs  models.rs  mp3_analyzer.rs  persistence.rs
tauri/local-music-player/src-tauri/tests/: persistence_integration_test.rs
vue/musiclib/src-tauri/: Cargo.toml  tauri.conf.json
vue/musiclib/src-tauri/src/: database.rs  lib.rs
(+639 files in other folders)
