[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
uuid = { version = "1.7.0", features = ["v4"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
anyhow = "1.0"
id3 = "1.12.0"
walkdir = "2.4.0"
tauri-plugin-dialog = "2"
base64 = "0.21.7"
