[package]
name = "agent-llm"
version.workspace = true
edition.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }

# 流处理
futures = "0.3"
futures-util = "0.3"
bytes = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Trait 支持
async-trait = "0.1"

# 日志
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
uuid = { version = "1", features = ["v4"] }
