[package]
name = "agent-storage"
version.workspace = true
edition.workspace = true

[dependencies]
# 核心依赖
agent-core = { path = "../agent-core" }

# 数据库
sqlx = { workspace = true }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# UUID 和时间
uuid = { workspace = true }
chrono = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
