[package]
name = "agent-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { workspace = true, features = ["process", "io-util", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
