[package]
name = "agent-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-storage = { path = "../agent-storage" }
agent-llm = { path = "../agent-llm" }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# Trait 支持
async-trait = "0.1"

# 日志
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4"] }

# 序列化
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
